--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -6,10 +6,10 @@
       "source": [
         "# Kahn v. the stack\n",
         "\n",
-        "How topological sorting can be easily obtained with Kahn's algorithm and why it matters to understand recursive depth-first search of a *dag.*\n",
-        "\n",
+        "How topological sorting can be easily obtained with Kahn's algorithm and why it matters to understand recursive depth-first search of a _dag._\n",
         "\n",
         "## Reading:\n",
+        "\n",
         "[Chapter 6](https://jeffe.cs.illinois.edu/teaching/algorithms/book/06-dfs.pdf) from Jeff Erickson's book.\n"
       ]
     },
@@ -19,69 +19,66 @@
       "source": [
         "## The problem\n",
         "\n",
-        "Given a *dag,* can it be rearranged in a linear fashion so that all its vertices between a *source* and a a *sink* lie on the same plane and all edges point forward?\n",
-        "\n",
+        "Given a _dag,_ can it be rearranged in a linear fashion so that all its vertices between a _source_ and a a _sink_ lie on the same plane and all edges point forward?\n",
         "\n",
         "### Defitinions\n",
         "\n",
-        "* **dag:** directed acyclic graph.\n",
-        "* **source:** a vertex in a dag with no incoming edges.\n",
-        "* **sink:** a vertex in a dag with no outgoing edges.\n",
-        "\n",
+        "- **dag:** directed acyclic graph.\n",
+        "- **source:** a vertex in a dag with no incoming edges.\n",
+        "- **sink:** a vertex in a dag with no outgoing edges.\n",
         "\n",
         "### Kahn's algorithm\n",
         "\n",
-        "*Progressively remove the source vertices from the graph. The order in which they are removed, is the topologica order of the graph.*\n",
-        "\n",
+        "_Progressively remove the source vertices from the graph. The order in which they are removed, is the topologica order of the graph._\n",
         "\n",
         "### Practical considerations\n",
         "\n",
-        "A dag has at least one source vertex. Removing it will cause at least one of the remaining vertices to become source (in a smaller graph), and so on. Of course, removing vertices will destroy the graph. We want to preserve it. We are only interested in the order in which its vertices need to be rearranged so that all edges point forward. So we *pretend* to remove vertices and see which vertices become sources next."
+        "A dag has at least one source vertex. Removing it will cause at least one of the remaining vertices to become source (in a smaller graph), and so on. Of course, removing vertices will destroy the graph. We want to preserve it. We are only interested in the order in which its vertices need to be rearranged so that all edges point forward. So we _pretend_ to remove vertices and see which vertices become sources next.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def kahn(graph:list[list[int]]) -> list[int]:\n",
+        "def kahn(graph: list[list[int]]) -> list[int]:\n",
         "\n",
         "    # Ease of reference\n",
-        "    N = len(G) \n",
+        "    N = len(G)\n",
         "    NO_EDGE = G[0][0]\n",
         "\n",
-        "    # Calculate in-degrees of all vertices. \n",
+        "    # Calculate in-degrees of all vertices.\n",
         "    in_degrees = [0] * N\n",
         "    for u in range(N):\n",
         "        for v in range(N):\n",
         "            if G[u][v] != NO_EDGE:\n",
         "                # In edge u --> v we compute the in-degree of v\n",
         "                in_degrees[v] += 1\n",
-        "    \n",
+        "\n",
         "    # Initialize list of source vertices\n",
         "    sources = []\n",
         "    for i in range(N):\n",
         "        if in_degrees[i] == 0:\n",
         "            sources.append(i)\n",
-        "    \n",
+        "\n",
         "    # List to store the topological order\n",
         "    topological_order = []\n",
         "\n",
         "    # Progressively remove sources and update in-degrees\n",
         "    while len(sources) > 0:\n",
-        "        # Remove a source vertex \n",
-        "        vertex = sources.pop(0)\n",
+        "        # Remove a source vertex\n",
+        "        vertex = sources.pop()\n",
         "        # Add it to the topological order\n",
         "        topological_order.append(vertex)\n",
         "        # Decrease in-degrees of its neighbors\n",
-        "        for u in range(N):\n",
-        "            if G[vertex][u] != NO_EDGE\n",
+        "        for neighbor in range(N):\n",
+        "            if G[vertex][neighbor] != NO_EDGE:\n",
         "                in_degrees[neighbor] -= 1\n",
         "                # If in-degree becomes zero, add it to sources\n",
         "                if in_degrees[neighbor] == 0:\n",
         "                    sources.append(neighbor)\n",
-        "                \n",
+        "\n",
         "    # Done\n",
         "    return topological_order"
       ]
@@ -92,7 +89,23 @@
       "source": [
         "The topological order of a dag can also be infered from the time a vertex \"spends\" in the stack during a recursive depth-first search. This is the subject of [Chapter 6](https://jeffe.cs.illinois.edu/teaching/algorithms/book/06-dfs.pdf) in Jeff's book.\n",
         "\n",
-        "Given a graph's adjacency matrix `G` and a starting vertex `v`, "
+        "Given a graph's adjacency matrix `G` and a starting vertex `v`,\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "G = [\n",
+        "    [0, 1, 1, 0, 0, 0],\n",
+        "    [0, 0, 1, 0, 0, 0],\n",
+        "    [0, 0, 0, 0, 1, 1],\n",
+        "    [1, 1, 1, 0, 1, 1],\n",
+        "    [0, 0, 0, 0, 0, 1],\n",
+        "    [0, 0, 0, 0, 0, 0],\n",
+        "]"
       ]
     },
     {
