--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -38,21 +38,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def kahn(graph: list[list[int]]) -> list[int]:\n",
+        "def khan(graph: list[list[int]]) -> list[int]:\n",
+        "\n",
+        "    # Data integrity check - a bit much but I was having fun with it.\n",
+        "    if (\n",
+        "         graph is None\n",
+        "        or not isinstance(graph, list)\n",
+        "        or len(graph) == 0\n",
+        "        or not all(isinstance(row, list) for row in graph)\n",
+        "        or not all(len(row) == len(graph) for row in graph)\n",
+        "    ):\n",
+        "        raise ValueError(\"Input must be a non-empty square adjacency matrix.\")\n",
         "\n",
         "    # Ease of reference\n",
-        "    N = len(G)\n",
-        "    NO_EDGE = G[0][0]\n",
+        "    N = len(graph)\n",
+        "    NO_EDGE = graph[0][0]\n",
         "\n",
         "    # Calculate in-degrees of all vertices.\n",
         "    in_degrees = [0] * N\n",
         "    for u in range(N):\n",
         "        for v in range(N):\n",
-        "            if G[u][v] != NO_EDGE:\n",
+        "            if graph[u][v] != NO_EDGE:\n",
         "                # In edge u --> v we compute the in-degree of v\n",
         "                in_degrees[v] += 1\n",
         "\n",
@@ -68,12 +78,12 @@
         "    # Progressively remove sources and update in-degrees\n",
         "    while len(sources) > 0:\n",
         "        # Remove a source vertex\n",
-        "        vertex = sources.pop()\n",
+        "        vertex = sources.pop(0)\n",
         "        # Add it to the topological order\n",
         "        topological_order.append(vertex)\n",
         "        # Decrease in-degrees of its neighbors\n",
         "        for neighbor in range(N):\n",
-        "            if G[vertex][neighbor] != NO_EDGE:\n",
+        "            if graph[vertex][neighbor] != NO_EDGE:\n",
         "                in_degrees[neighbor] -= 1\n",
         "                # If in-degree becomes zero, add it to sources\n",
         "                if in_degrees[neighbor] == 0:\n",
@@ -89,12 +99,43 @@
       "source": [
         "The topological order of a dag can also be infered from the time a vertex \"spends\" in the stack during a recursive depth-first search. This is the subject of [Chapter 6](https://jeffe.cs.illinois.edu/teaching/algorithms/book/06-dfs.pdf) in Jeff's book.\n",
         "\n",
-        "Given a graph's adjacency matrix `G` and a starting vertex `v`,\n"
+        "Given a graph's adjacency matrix `G` and a starting vertex `v`, the traversal of the graph can be writen as shown below.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def DFS(G, v, marked):\n",
+        "    # Mark the current vertex as visited\n",
+        "    marked.append(v)\n",
+        "    # Consider all the neighbors of v\n",
+        "    for w in range(len(G)):\n",
+        "        # For any edg v --> w, if w is unmarked,\n",
+        "        # plan to visit it.\n",
+        "        if G[v][w] != G[0][0] and w not in marked:\n",
+        "            # Plan to visit w\n",
+        "            DFS(G, w, marked)\n",
+        "    return marked"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def DFS_helper(G, v):\n",
+        "    \"\"\"Helper method to launch a DFS from vertex v.\"\"\"\n",
+        "    # Launch DFS from v with empty marked list\n",
+        "    return DFS(G, v, [])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -109,14 +150,25 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "execution_count": 27,
       "metadata": {},
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[3, 0, 1, 2, 4, 5]\n",
+            "[3, 0, 1, 2, 4, 5]\n",
+            "[3, 0, 1, 2, 4, 5]\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(khan(G))\n",
+        "print(DFS_helper(G, 3))\n",
+        "print(DFS(G, 3, []))"
+      ]
     }
   ],
   "metadata": {
