--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -74,16 +74,13 @@
         "        if in_degrees[i] == 0:\n",
         "            sources.append(i)\n",
         "\n",
-        "    print(sources)\n",
         "    # List to store the topological order\n",
         "    topological_order = []\n",
         "\n",
         "    # Progressively remove sources and update in-degrees\n",
         "    while len(sources) > 0:\n",
-        "        print(sources)\n",
         "        # Remove a source vertex\n",
         "        vertex = sources.pop(0)\n",
-        "        print(vertex)\n",
         "        # Add it to the topological order\n",
         "        topological_order.append(vertex)\n",
         "        # Decrease in-degrees of its neighbors\n",
@@ -104,12 +101,12 @@
       "source": [
         "The topological order of a dag can also be infered from the time a vertex \"spends\" in the stack during a recursive depth-first search. This is the subject of [Chapter 6](https://jeffe.cs.illinois.edu/teaching/algorithms/book/06-dfs.pdf) in Jeff's book.\n",
         "\n",
-        "Given a graph's adjacency matrix `G` and a starting vertex `v`, the traversal of the graph can be writen as shown below.\n"
+        "Given a graph's adjacency matrix `G` and a starting vertex `v`, the depth-first traversal of the graph can be writen as shown below.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -127,8 +124,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Traversal can be initiated with a helper method that makes the initial call to the recursive method. (The helper function is not really needed. We can make the initial call as `DFS(G,v,[])` but it's nice to have a helper.)"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -139,8 +143,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**For this assignment** show how to obtain the topological sorting of a dag using recursive DFS by timing how long each vertex \"stays\" in the stack."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -153,41 +164,14 @@
         "    [0, 0, 0, 0, 0, 0],\n",
         "]\n",
         "\n",
-        "# need a better graph for DFS testing"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 37,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[3]\n",
-            "[3]\n",
-            "3\n",
-            "[0]\n",
-            "0\n",
-            "[1]\n",
-            "1\n",
-            "[2]\n",
-            "2\n",
-            "[4]\n",
-            "4\n",
-            "[5]\n",
-            "5\n",
-            "[3, 0, 1, 2, 4, 5]\n",
-            "[3, 0, 1, 2, 4, 5]\n",
-            "[3, 0, 1, 2, 4, 5]\n"
-          ]
-        }
-      ],
-      "source": [
-        "print(khan(G))\n",
-        "print(DFS_helper(G, 3))\n",
-        "print(DFS(G, 3, []))"
+        "G2 = [\n",
+        "    [0,0,1,0,1,1],\n",
+        "    [0,0,1,0,0,0],\n",
+        "    [0,0,0,0,1,1],\n",
+        "    [0,1,2,0,0,1],\n",
+        "    [0,0,0,0,0,1],\n",
+        "    [0,0,0,0,0,0]\n",
+        "]"
       ]
     }
   ],
